# mod.chanfix

./: .cvsignore  .svnignore  ADDFLAGCommand.cc  ADDHOSTCommand.cc  ADDNOTECommand.cc  ADDUSERCommand.cc  ALERTCommand.cc  BLOCKCommand.cc  CANFIXCommand.cc  CHANFIXCommand.cc  CHECKCommand.cc  DEBUGCommand.cc  DELFLAGCommand.cc  DELHOSTCommand.cc  DELNOTECommand.cc  DELUSERCommand.cc  HELPCommand.cc  HISTORYCommand.cc  INFOCommand.cc  INVITECommand.cc  LASTCOMCommand.cc  LISTBLOCKEDCommand.cc  LISTHOSTSCommand.cc  LISTTEMPBLOCKEDCommand.cc  Makefile.am  Makefile.in  OPLISTCommand.cc  OPNICKSCommand.cc  QUOTECommand.cc  REHASHCommand.cc  RELOADCommand.cc  REQUESTOPCommand.cc  ROTATECommand.cc  SAYCommand.cc  SCORECommand.cc  SETCommand.cc  SETGROUPCommand.cc  SHUTDOWNCommand.cc  SIMULATECommand.cc  STATUSCommand.cc  (+41 more)
doc/: chanfix.addme.sql  chanfix.help.sql  chanfix.language.english.sql  chanfix.languages.sql  chanfix.sql  checkvarargs.py  chktrans.py  cparse.py  update.notes.php
patches/: extended_accounts.diff  gnuworld-200603222050.diff
